tests/baselines/reference/tsxSpreadAttributesResolution5.errors.txt
file.tsx(22,10): error TS2322: Type '{ x: string; y: number; }' is not assignable to type 'PoisonedProp'.
  Types of property 'y' are incompatible.
    Type 'number' is not assignable to type '2'.
file.tsx(28,5): error TS2564: Property 'greeting' has no initializer and is not definitely assigned in the constructor.
file.tsx(35,10): error TS2559: Type '{ prop1: boolean; }' has no properties in common with type 'IntrinsicAttributes & IntrinsicClassAttributes<EmptyProp> & { children?: ReactNode | undefined; }'.


==== file.tsx (3 errors) ====
    /// <reference path="/.lib/react.d.ts" />
    
    import React = require('react');
    
    interface PoisonedProp {
        x: string;
        y: 2;
    }
    
    class Poisoned extends React.Component<PoisonedProp, {}> {
        render() {
            return <div>Hello</div>;
        }
    }
    
    let obj = {
        x: "hello world",
        y: 2
    };
    
    // Error as "obj" has type { x: string; y: number }
    let p = <Poisoned {...obj} />;
             ~~~~~~~~
!!! error TS2322: Type '{ x: string; y: number; }' is not assignable to type 'PoisonedProp'.
!!! error TS2322:   Types of property 'y' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type '2'.
    
    class EmptyProp extends React.Component<{}, {}> {
        render() {
            return <div>Default hi</div>;
        }
        greeting: string;
        ~~~~~~~~
!!! error TS2564: Property 'greeting' has no initializer and is not definitely assigned in the constructor.
    }
    
    let o = {
        prop1: false
    }
    // Ok
    let e = <EmptyProp {...o} />;
             ~~~~~~~~~
!!! error TS2559: Type '{ prop1: boolean; }' has no properties in common with type 'IntrinsicAttributes & IntrinsicClassAttributes<EmptyProp> & { children?: ReactNode | undefined; }'.